# discord-us

./: .gitignore  Cargo.toml  README.md  cool.waterfall  files.db
app/: index.html  package.json  pnpm-lock.yaml
app/src/: App.svelte  params.ts  settings.ts  styles.css
app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  database.rs  main.rs  manager.rs  settings.rs  state.rs
app/src/components/: button.svelte  collapse.svelte  input.svelte  progressbar.svelte
app/src/components/resizable/: resizable.svelte
app/src/routes/export/: page.svelte
app/src/routes/home/: filedrop.ts  page.svelte  top-bar.svelte
app/src/routes/home/transfers/: actions.ts  columns.ts  left-bar.svelte  table.svelte  transfers.svelte
app/src/routes/options/: cred.svelte  page.svelte
app/src/routes/upload/: page.svelte
cli/: Cargo.toml
cli/src/: main.rs  utils.rs
src/: _signal.rs  common.rs  database.rs  downloader.rs  http_client.rs  lib.rs  main.rs  signal.rs  uploader.rs  utils.rs
src/download/: http.rs  mod.rs
src/fs/: dir.rs  file.rs  mod.rs
src/pack/: container.rs  crypt.rs  key.rs  mod.rs
src/signal/: bool.rs  mod.rs  progress.rs  range.rs
src/upload/: account.rs  bot.rs  container.rs  mod.rs  pool.rs
src/utils/: limit.rs  mod.rs  range.rs  read.rs  safe.rs
