[package]
name = "discord-us"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] }
sha256 = "1.4.0"
reqwest = { version = "0.11.20", features = ["blocking", "json", "brotli", "gzip"] }
aes = "0.7"
block-modes = "0.8"
pbkdf2 = "0.9"
hmac = "0.11.0"
sha2 = "0.9.5"
uuid = {version = "1.4.1", features = ["v4"]}
serde_json = "1.0.105"
md5 = "0.7"
threadpool = "1.8.1"
rand = "0.8.5"