[package]
name = "discord-unlimited-storage-app"
version = "0.1.0"
description = "Abusing discord CDN to get unlimited storage"
authors = ["theking90000"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "path-all", "shell-open", "dialog"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
discord-us = { path = "../.." }
tauri-plugin-context-menu = "0.4.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
